# tracing-console

./: Cargo.toml  DESIGN.md  README.md  install.sh
.github/workflows/: release.yaml
tracing-cache/: Cargo.toml
tracing-cache/benches/: span_throughput.rs
tracing-cache/src/: cache.rs  config.rs  driver.rs  id_encoding.rs  lib.rs  object_pool.rs  predicate.rs  record.rs  tests.rs  thread_state.rs
tracing-console/: Cargo.toml
tracing-console-host/: Cargo.toml
tracing-console-host/examples/: fs_listing_api.rs  synth_load.rs
tracing-console-host/src/: lib.rs  protocol.rs  server.rs  wire.rs
tracing-console/src/: aggregate.rs  args.rs  installer.rs  main.rs  model.rs  runtime.rs  stats.rs
tracing-console/src/aggregate/: mod.rs  state.rs  tests.rs  types.rs  util.rs
tracing-console/src/model/: core.rs  explore.rs  graph.rs  mod.rs  tests.rs  update.rs
tracing-console/src/view/: explore.rs  graph.rs  header.rs  mod.rs  table.rs
