[workspace]
resolver = "2"
members = ["tracing-console", "tracing-cache", "tracing-console-host"]

[workspace.dependencies]
criterion                       = { version = "0", features = ["async_tokio"] }
async-stream                    = { version = "0.3" }
chrono                          = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap                            = { version = "4", features = ["derive"] }
compact_str                     = { version = "0.8", features = ["serde"] }
crossterm                       = { version = "0.28" }
futures                         = { version = "0.3" }
futures-core                    = { version = "0.3" }
k-cache                         = { version = "0" }
log                             = { version = "0.4" }
protosocket                     = { version = "1" }
protosocket-messagepack         = { version = "1" }
protosocket-rpc                 = { version = "1" }
protosocket-server              = { version = "1" }
rand                            = { version = "0.9" }
ratatui                         = { version = "0.29" }
serde                           = { version = "1", features = ["derive"] }
serde_json                      = { version = "1" }
slab                            = { version = "0" }
smallvec                        = { version = "1" }
spillway                        = { version = "1" }
tokio                           = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util", "signal"] }
tracing                         = { version = "0" }
tracing-cache                   = { path = "tracing-cache" }
tracing-console-host            = { path = "tracing-console-host" }
tracing-futures                 = { version = "0.2" }

[profile.bench]
debug = "line-tables-only"

[profile.release]
debug = "line-tables-only"
