[package]
name = "tracing-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
compact_str                     = { workspace = true }
k-cache                         = { workspace = true }
log                             = { workspace = true }
slab                            = { workspace = true }
spillway                        = { workspace = true }
tokio                           = { workspace = true }
tracing                         = { workspace = true }

[[bench]]
name = "span_throughput"
harness = false

[dev-dependencies]
criterion                       = { workspace = true }
tracing-futures                 = { workspace = true }
