[package]
name = "tracing-console-host"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream                    = { workspace = true }
futures-core                    = { workspace = true }
log                             = { workspace = true }
protosocket                     = { workspace = true }
protosocket-messagepack         = { workspace = true }
protosocket-rpc                 = { workspace = true }
protosocket-server              = { workspace = true }
serde                           = { workspace = true }
tokio                           = { workspace = true }
tracing                         = { workspace = true }
tracing-cache                   = { workspace = true }

[dev-dependencies]
clap                            = { workspace = true }
futures                         = { workspace = true }
