[package]
name = "tracing-console"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tracing-console"
path = "src/main.rs"

[dependencies]
chrono                          = { workspace = true }
clap                            = { workspace = true }
crossterm                       = { workspace = true }
futures                         = { workspace = true }
k-cache                         = { workspace = true }
log                             = { workspace = true }
protosocket                     = { workspace = true }
protosocket-messagepack         = { workspace = true }
protosocket-rpc                 = { workspace = true }
ratatui                         = { workspace = true }
serde                           = { workspace = true }
serde_json                      = { workspace = true }
spillway                        = { workspace = true }
tokio                           = { workspace = true }
tracing-console-host            = { workspace = true }
